Remove hearts from porn

--- a/porn/index.html
+++ b/porn/index.html
@@ -24,52 +24,52 @@
       <div class="row">
         <div class="col-lg-3 col-md-6">
           <h2>Pornstar</h2>
-          <p><a target="_blank" href="https://www.pornhub.com/pornstar/eva-elfie/videos?o=lg">💜 Eva Elfie</a></p>
-          <p><a target="_blank" href="https://www.pornhub.com/pornstar/haley-reed/videos?o=lg">💜 Haley Reed</a></p>
-          <p><a target="_blank" href="https://www.pornhub.com/pornstar/jazmin-luv?o=lg">💜 Jazmin Luv</a></p>
-          <p><a target="_blank" href="https://www.pornhub.com/pornstar/kali-roses/videos?o=lg">💜 Kali Roses</a></p>
-          <p><a target="_blank" href="https://www.pornhub.com/pornstar/kyler-quinn/videos?o=lg">💜 Kyler Quinn</a></p>
-          <p><a target="_blank" href="https://www.pornhub.com/pornstar/liz-jordan/videos?o=lg">💜 Liz Jordan</a></p>
-          <p><a target="_blank" href="https://www.pornhub.com/pornstar/melody-marks/videos?o=lg">💜 Melody Marks</a></p>
-          <p><a target="_blank" href="https://www.pornhub.com/pornstar/mia-kay/videos?o=lg">💜 Mia Kay</a></p>
-          <p><a target="_blank" href="https://www.pornhub.com/pornstar/mia-malkova/videos?o=lg">💜 Mia Malkova</a></p>
-          <p><a target="_blank" href="https://www.pornhub.com/pornstar/scarlett-jones/videos?o=lg">💜 Scarlett Jones</a></p>
-          <p><a target="_blank" href="https://www.pornhub.com/pornstar/stella-cox/videos?o=lg">💜 Stella Cox</a></p>
+          <p><a target="_blank" href="https://www.pornhub.com/pornstar/eva-elfie/videos?o=lg">Eva Elfie</a></p>
+          <p><a target="_blank" href="https://www.pornhub.com/pornstar/haley-reed/videos?o=lg">Haley Reed</a></p>
+          <p><a target="_blank" href="https://www.pornhub.com/pornstar/jazmin-luv?o=lg">Jazmin Luv</a></p>
+          <p><a target="_blank" href="https://www.pornhub.com/pornstar/kali-roses/videos?o=lg">Kali Roses</a></p>
+          <p><a target="_blank" href="https://www.pornhub.com/pornstar/kyler-quinn/videos?o=lg">Kyler Quinn</a></p>
+          <p><a target="_blank" href="https://www.pornhub.com/pornstar/liz-jordan/videos?o=lg">Liz Jordan</a></p>
+          <p><a target="_blank" href="https://www.pornhub.com/pornstar/melody-marks/videos?o=lg">Melody Marks</a></p>
+          <p><a target="_blank" href="https://www.pornhub.com/pornstar/mia-kay/videos?o=lg">Mia Kay</a></p>
+          <p><a target="_blank" href="https://www.pornhub.com/pornstar/mia-malkova/videos?o=lg">Mia Malkova</a></p>
+          <p><a target="_blank" href="https://www.pornhub.com/pornstar/scarlett-jones/videos?o=lg">Scarlett Jones</a></p>
+          <p><a target="_blank" href="https://www.pornhub.com/pornstar/stella-cox/videos?o=lg">Stella Cox</a></p>
         </div>
         <div class="col-lg-3 col-md-6">
           <h2>Model</h2>
-          <p><a target="_blank" href="https://www.pornhub.com/model/lonelymeow">❤️ LonelyMeow</a></p>
-          <p><a target="_blank" href="https://www.pornhub.com/model/mollyredwolf">❤️ MollyRedWolf</a></p>
-          <p><a target="_blank" href="https://www.pornhub.com/model/monmontw">❤️ Monmontw</a></p>
-          <p><a target="_blank" href="https://www.pornhub.com/model/nicolove">❤️ NicoLove</a></p>
-          <p><a target="_blank" href="https://www.pornhub.com/model/sweetie-fox">❤️ Sweetie Fox</a></p>
-          <p><a target="_blank" href="https://www.pornhub.com/model/vita-won">❤️ Vita Won</a></p>
+          <p><a target="_blank" href="https://www.pornhub.com/model/lonelymeow">LonelyMeow</a></p>
+          <p><a target="_blank" href="https://www.pornhub.com/model/mollyredwolf">MollyRedWolf</a></p>
+          <p><a target="_blank" href="https://www.pornhub.com/model/monmontw">Monmontw</a></p>
+          <p><a target="_blank" href="https://www.pornhub.com/model/nicolove">NicoLove</a></p>
+          <p><a target="_blank" href="https://www.pornhub.com/model/sweetie-fox">Sweetie Fox</a></p>
+          <p><a target="_blank" href="https://www.pornhub.com/model/vita-won">Vita Won</a></p>
         </div>
         <div class="col-lg-3 col-md-6">
           <h2>日語中字</h2>
-          <p><a target="_blank" href="https://www.pornhub.com/pornstar/akari-asagiri">🧡 朝桐光</a></p>
-          <p><a target="_blank" href="https://www.pornhub.com/pornstar/arisa-nakano">🧡 中野亞梨沙</a></p>
-          <p><a target="_blank" href="https://www.pornhub.com/pornstar/ayumi-iwasa">🧡 岩佐步美</a></p>
-          <p><a target="_blank" href="https://www.pornhub.com/pornstar/honami-uehara">🧡 上原保奈美</a></p>
-          <p><a target="_blank" href="https://www.pornhub.com/pornstar/mai-shirosaki">🧡 白咲舞</a></p>
-          <p><a target="_blank" href="https://www.pornhub.com/pornstar/maki-hojo">🧡 北條麻妃</a></p>
-          <p><a target="_blank" href="https://www.pornhub.com/pornstar/nami-itoshino">🧡 愛乃奈美</a></p>
-          <p><a target="_blank" href="https://www.pornhub.com/pornstar/ren-azumi">🧡 蓮美戀</a></p>
-          <p><a target="_blank" href="https://www.pornhub.com/pornstar/yui-hatano">🧡 波多野結衣</a></p>
-          <p><a target="_blank" href="https://www.pornhub.com/video/search?search=kotone+amamiya">🧡 雨宮琴音</a></p>
+          <p><a target="_blank" href="https://www.pornhub.com/pornstar/akari-asagiri">朝桐光</a></p>
+          <p><a target="_blank" href="https://www.pornhub.com/pornstar/arisa-nakano">中野亞梨沙</a></p>
+          <p><a target="_blank" href="https://www.pornhub.com/pornstar/ayumi-iwasa">岩佐步美</a></p>
+          <p><a target="_blank" href="https://www.pornhub.com/pornstar/honami-uehara">上原保奈美</a></p>
+          <p><a target="_blank" href="https://www.pornhub.com/pornstar/mai-shirosaki">白咲舞</a></p>
+          <p><a target="_blank" href="https://www.pornhub.com/pornstar/maki-hojo">北條麻妃</a></p>
+          <p><a target="_blank" href="https://www.pornhub.com/pornstar/nami-itoshino">愛乃奈美</a></p>
+          <p><a target="_blank" href="https://www.pornhub.com/pornstar/ren-azumi">蓮美戀</a></p>
+          <p><a target="_blank" href="https://www.pornhub.com/pornstar/yui-hatano">波多野結衣</a></p>
+          <p><a target="_blank" href="https://www.pornhub.com/video/search?search=kotone+amamiya">雨宮琴音</a></p>
         </div>
         <div class="col-lg-3 col-md-6">
           <h2>Channel</h2>
-          <p><a target="_blank" href="https://www.pornhub.com/channels/bratty-sis">💛 Bratty Sis</a></p>
-          <p><a target="_blank" href="https://www.pornhub.com/channels/dorcelclub">💛 DorcelClub</a></p>
-          <p><a target="_blank" href="https://www.pornhub.com/channels/faketaxi">💛 Fake Taxi</a></p>
-          <p><a target="_blank" href="https://www.pornhub.com/channels/modelmediaasia">💛 Model Media</a></p>
-          <p><a target="_blank" href="https://www.pornhub.com/channels/ours-hd-tv">💛 Ours HD TV</a></p>
-          <p><a target="_blank" href="https://www.pornhub.com/channels/property-sex">💛 Property Sex</a></p>
-          <p><a target="_blank" href="https://www.pornhub.com/channels/psychoporn-tw">💛 Psychoporn</a></p>
-          <p><a target="_blank" href="https://www.pornhub.com/channels/teamskeet">💛 Team Skeet</a></p>
-          <p><a target="_blank" href="https://www.pornhub.com/channels/tushy">💛 Tushy</a></p>
-          <p><a target="_blank" href="https://www.pornhub.com/channels/wow-girls">💛 Wow Girls</a></p>
+          <p><a target="_blank" href="https://www.pornhub.com/channels/bratty-sis">Bratty Sis</a></p>
+          <p><a target="_blank" href="https://www.pornhub.com/channels/dorcelclub">DorcelClub</a></p>
+          <p><a target="_blank" href="https://www.pornhub.com/channels/faketaxi">Fake Taxi</a></p>
+          <p><a target="_blank" href="https://www.pornhub.com/channels/modelmediaasia">Model Media</a></p>
+          <p><a target="_blank" href="https://www.pornhub.com/channels/ours-hd-tv">Ours HD TV</a></p>
+          <p><a target="_blank" href="https://www.pornhub.com/channels/property-sex">Property Sex</a></p>
+          <p><a target="_blank" href="https://www.pornhub.com/channels/psychoporn-tw">Psychoporn</a></p>
+          <p><a target="_blank" href="https://www.pornhub.com/channels/teamskeet">Team Skeet</a></p>
+          <p><a target="_blank" href="https://www.pornhub.com/channels/tushy">Tushy</a></p>
+          <p><a target="_blank" href="https://www.pornhub.com/channels/wow-girls">Wow Girls</a></p>
         </div>
       </div>
     </div>
