Update index page

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <p><a target="_blank" href="https://www.learnmode.net/home/">學習吧</a></p>
                 <p><a target="_blank" href="https://open.163.com/khan/">網易公開課</a></p>
                 <p><a target="_blank" href="https://www.khanacademy.org/">Khan Academy</a></p>
-                <p><a target="_blank" href="https://www.youtube.com/@MrRamihaha">蕾咪 Rami</a></p>
+                <p><a target="_blank" href="https://www.youtube.com/@EBCmoneyshow">理財達人秀</a></p>
                 <p><a target="_blank" href="https://www.elllo.org/">ELLLO</a></p>
             </div>
 
