--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
                 <h2>其它</h2>
                 <p><a target="_blank" href="https://www.packtpub.com/free-learning">Packt</a></p>
                 <p><a target="_blank" href="https://www.canva.com/">Canva</a></p>
+                <p><a target="_blank" href="https://genial.ly/">Genially</a></p>
                 <p><a target="_blank" href="https://lis.nsysu.edu.tw/">中山圖資處</a></p>
                 <p><a target="_blank" href="https://dec.lib.nsysu.edu.tw/patroninfo*cht">個人借閱</a></p>
             </div>
