--- a/index.html
+++ b/index.html
@@ -27,18 +27,18 @@
                 <p><a target="_blank" href="https://manager.line.biz/">LINE商用</a></p>
                 <p><a target="_blank" href="https://tw.buy.yahoo.com/">Yahoo!購物</a></p>
                 <p><a target="_blank" href="https://24h.pchome.com.tw/index/">PChome購物</a></p>
-                <p><a target="_blank" href="https://activity.books.com.tw/books66/">博客來66折</a></p>
+                <p><a target="_blank" href="https://www.babyhome.com.tw/">BabyHome</a></p>
                 <p><a target="_blank" href="http://www.atmovies.com.tw/showtime/t07704/a07/">環球影城</a></p>
             </div>
 
             <div class="col-lg-3 col-md-6">
                 <h2>充實學習</h2>
+                <p><a target="_blank" href="https://activity.books.com.tw/books66/">博客來66折</a></p>
                 <p><a target="_blank" href="https://www.coursera.org/">Coursera</a></p>
                 <p><a target="_blank" href="https://www.tenlong.com.tw/search?keyword=python&langs=zh_tw&sort=publication_date">Python Books</a></p>
                 <p><a target="_blank" href="https://www.learnmode.net/home/">學習吧</a></p>
                 <p><a target="_blank" href="https://open.163.com/khan/">網易公開課</a></p>
                 <p><a target="_blank" href="https://www.khanacademy.org/">Khan Academy</a></p>
-                <p><a target="_blank" href="https://www.youtube.com/@EBCmoneyshow">理財達人秀</a></p>
                 <p><a target="_blank" href="https://www.elllo.org/">ELLLO</a></p>
             </div>
 
@@ -62,12 +62,13 @@
 
             <div class="col-lg-3 col-md-6">
                 <h2>投資理財</h2>
+                <p><a target="_blank" href="https://www.youtube.com/@EBCmoneyshow">理財達人秀</a></p>
                 <p><a target="_blank" href="https://www.cnyes.com/">鉅亨網</a></p>
                 <p><a target="_blank" href="https://www.stockfeel.com.tw/">StockFeel股感</a></p>
                 <p><a target="_blank" href="https://www.cmoney.tw/vt/">CMoney股市大富翁</a></p>
-                <p><a target="_blank" href="https://www.stockq.org/">StockQ國際股市指數</a></p>
                 <p><a target="_blank" href="https://www.moneybar.com.tw/">moneybar</a></p>
                 <p><a target="_blank" href="https://house123.com.tw/">house123</a></p>
+                <!-- <p><a target="_blank" href="https://www.stockq.org/">StockQ國際股市指數</a></p> -->
             </div>
 
             <div class="col-lg-3 col-md-6">
