Change logo and update page styles

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <link rel="stylesheet" href="/static/bootstrap.min.css">
     <link rel="stylesheet" href="/static/main.css?23012014">
 </head>
-<body>
+<body class="body-main">
     <div class="jumbotron-main">
         <div class="container">
-            <h1>Bug's Bookmarks</h1>
+            <h1>Main <small><a class="text-white smaller" href="/misc">...</a></small></h1>
         </div>
     </div>
     <div class="container page-main mb-5">
@@ -54,9 +54,11 @@
             <div class="col-lg-3 col-md-6">
                 <h2>YT音樂</h2>
                 <p><a target="_blank" href="https://music.youtube.com/channel/UCkbbMCA40i18i7UdjayMPAg">BLACKPINK</a></p>
-                <p><a target="_blank" href="https://music.youtube.com/channel/UCEdZAdnnKqbaHOlv8nM6OtA">aespa</a></p>
+                <p><a target="_blank" href="https://music.youtube.com/channel/UCAq0pFGa2w9SjxOq0ZxKVIw">TWICE</a></p>
                 <p><a target="_blank" href="https://music.youtube.com/channel/UC_4Y1QqJr60C5Z7-eQWy-mw">IVE</a></p>
+                <p><a target="_blank" href="https://music.youtube.com/channel/UCEdZAdnnKqbaHOlv8nM6OtA">aespa</a></p>
                 <p><a target="_blank" href="https://music.youtube.com/channel/UCAKvDuIX3m1AUdPpDSqV_3w">Kep1er</a></p>
+                <p><a target="_blank" href="https://music.youtube.com/channel/UCxOqS3cYg4FaHbobICo7nFQ">NewJeans</a></p>
                 <p><a target="_blank" href="https://music.youtube.com/channel/UCWT2ZfW7d8YI-HinHEVhyCA">(G)I-DLE</a></p>
             </div>
 
