--- a/misc/index.html
+++ b/misc/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0, minimum-scale=1, maximum-scale=1, shrink-to-fit=no">
     <meta name="description" content="Bug's Bookmarks">
     <meta name="author" content="Bug">
-    <title>Misc Bookmarks</title>
+    <title>Misc | Bug's Bookmarks</title>
     <link rel="icon" href="/favicon.png">
     <link rel="apple-touch-icon" href="/apple-touch-icon.png">
     <link rel="stylesheet" href="/static/bootstrap.min.css">
@@ -13,14 +13,14 @@
 
   </head>
 
-  <body>
+  <body class="body-misc">
     <div class="jumbotron-misc">
       <div class="container">
-        <h1>Misc Links <small><a class="text-white smaller" href="/">Home</a></small></h1>
+        <h1>Misc <small><a class="text-white smaller" href="/">&#8962;</a></small></h1>
       </div>
     </div>
 
-    <div class="container page-main mb-5">
+    <div class="container page-misc mb-5">
       <div class="row">
         <div class="col-lg-3 col-md-6">
           <h2>程式</h2>
