--- a/porn/index.html
+++ b/porn/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0, minimum-scale=1, maximum-scale=1, shrink-to-fit=no">
     <meta name="description" content="Bug's Bookmarks">
     <meta name="author" content="Bug">
-    <title>Porn Bookmarks</title>
+    <title>Porn | Bug's Bookmarks</title>
     <link rel="icon" href="/favicon.png">
     <link rel="apple-touch-icon" href="/apple-touch-icon.png">
     <link rel="stylesheet" href="/static/bootstrap.min.css">
@@ -13,14 +13,14 @@
 
   </head>
 
-  <body>
+  <body class="body-porn">
     <div class="jumbotron-porn">
       <div class="container">
-        <h1>Porn Links <small><a class="text-white smaller" href="/">Home</a></small></h1>
+        <h1>Porn <small><a class="text-white smaller" href="/">&#8962;</a></small></h1>
       </div>
     </div>
 
-    <div class="container page-main mb-5">
+    <div class="container page-porn mb-5">
       <div class="row">
         <div class="col-lg-3 col-md-6">
           <h2>Pornstar</h2>
@@ -46,7 +46,7 @@
           <p><a target="_blank" href="https://www.pornhub.com/model/vita-won">Vita Won</a></p>
         </div>
         <div class="col-lg-3 col-md-6">
-          <h2>日語中字</h2>
+          <h2>Japanese</h2>
           <p><a target="_blank" href="https://www.pornhub.com/pornstar/akari-asagiri">朝桐光</a></p>
           <p><a target="_blank" href="https://www.pornhub.com/pornstar/arisa-nakano">中野亞梨沙</a></p>
           <p><a target="_blank" href="https://www.pornhub.com/pornstar/ayumi-iwasa">岩佐步美</a></p>
