--- a/index.html
+++ b/index.html
@@ -39,16 +39,16 @@
                 <p><a target="_blank" href="https://www.learnmode.net/home/">學習吧</a></p>
                 <p><a target="_blank" href="https://open.163.com/khan/">網易公開課</a></p>
                 <p><a target="_blank" href="https://www.khanacademy.org/">Khan Academy</a></p>
-                <p><a target="_blank" href="https://www.elllo.org/">ELLLO</a></p>
             </div>
 
             <div class="col-lg-3 col-md-6">
                 <h2>YT學習</h2>
-                <p><a target="_blank" href="https://www.youtube.com/watch?v=tpIctyqH29Q&list=PL8dPuuaLjXtNlUrzyH5r6jN9ulIgZBpdo">CS Preview</a></p>
+                <p><a target="_blank" href="https://www.youtube.com/@snoweienglish">雪薇英文</a></p>
                 <p><a target="_blank" href="https://www.youtube.com/@SpeakEnglishWithVanessa">English with Vanessa</a></p>
                 <p><a target="_blank" href="https://www.youtube.com/@engvidEmma">English with Emma</a></p>
                 <p><a target="_blank" href="https://www.youtube.com/@EnglishwithLucy">English with Lucy</a></p>
                 <p><a target="_blank" href="https://www.youtube.com/@yuka_japaneseteacher">Japanese with Yuka</a></p>
+                <p><a target="_blank" href="https://www.youtube.com/watch?v=tpIctyqH29Q&list=PL8dPuuaLjXtNlUrzyH5r6jN9ulIgZBpdo">CS Preview</a></p>
             </div>
 
             <div class="col-lg-3 col-md-6">
