--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="icon" href="/favicon.png">
     <link rel="apple-touch-icon" href="/apple-touch-icon.png">
     <link rel="stylesheet" href="/static/bootstrap.min.css">
-    <link rel="stylesheet" href="/static/main.css?23012014">
+    <link rel="stylesheet" href="/static/main.css?230323">
 </head>
 <body class="body-main">
     <div class="jumbotron-main">
@@ -19,7 +19,6 @@
     </div>
     <div class="container page-main mb-5">
         <div class="row">
-
             <div class="col-lg-3 col-md-6">
                 <h2>生活與購物</h2>
                 <p><a target="_blank" href="https://mail.google.com/">Gmail</a></p>
