--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <p><a target="_blank" href="https://activity.books.com.tw/books66/">博客來66折</a></p>
                 <p><a target="_blank" href="https://www.coursera.org/">Coursera</a></p>
                 <p><a target="_blank" href="https://www.tenlong.com.tw/search?keyword=python&langs=zh_tw&sort=publication_date">Python Books</a></p>
-                <p><a target="_blank" href="https://www.learnmode.net/home/">學習吧</a></p>
+                <p><a target="_blank" href="https://www.junyiacademy.org/">均一教育平台</a></p>
                 <p><a target="_blank" href="https://open.163.com/khan/">網易公開課</a></p>
                 <p><a target="_blank" href="https://www.khanacademy.org/">Khan Academy</a></p>
             </div>
