--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
                 <p><a target="_blank" href="https://www.junyiacademy.org/">均一教育平台</a></p>
                 <p><a target="_blank" href="https://open.163.com/khan/">網易公開課</a></p>
                 <p><a target="_blank" href="https://www.khanacademy.org/">Khan Academy</a></p>
+                <p><a target="_blank" href="https://barshai.org/">Barshai英文</a></p>
             </div>
 
             <div class="col-lg-3 col-md-6">
