--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <p><a target="_blank" href="https://www.junyiacademy.org/">均一教育平台</a></p>
                 <p><a target="_blank" href="https://open.163.com/khan/">網易公開課</a></p>
                 <p><a target="_blank" href="https://www.khanacademy.org/">Khan Academy</a></p>
-                <p><a target="_blank" href="https://barshai.org/">Barshai英文</a></p>
+                <p><a target="_blank" href="https://barshai.org/">Barshai</a></p>
             </div>
 
             <div class="col-lg-3 col-md-6">
@@ -89,6 +89,7 @@
                 <p><a target="_blank" href="https://getbootstrap.com/">Bootstrap</a></p>
                 <p><a target="_blank" href="https://developers.facebook.com/docs/facebook-login">Facebook Login</a></p>
                 <p><a target="_blank" href="https://console.developers.google.com/">Google API</a></p>
+                <p><a target="_blank" href="https://ksisunion.com/">ksisunion</a></p>
             </div>
 
             <div class="col-lg-3 col-md-6">
