update home links

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
                 <p><a target="_blank" href="https://www.youtube.com/@engvidEmma">English with Emma</a></p>
                 <p><a target="_blank" href="https://www.youtube.com/@EnglishwithLucy">English with Lucy</a></p>
                 <p><a target="_blank" href="https://www.youtube.com/@yuka_japaneseteacher">Japanese with Yuka</a></p>
+                <p><a target="_blank" href="https://www.youtube.com/@im_jp_en">IM 英日文</a></p>
                 <p><a target="_blank" href="https://www.youtube.com/watch?v=tpIctyqH29Q&list=PL8dPuuaLjXtNlUrzyH5r6jN9ulIgZBpdo">CS Preview</a></p>
             </div>
 
@@ -66,8 +67,8 @@
                 <h2>投資理財</h2>
                 <p><a target="_blank" href="https://www.youtube.com/@EBCmoneyshow">理財達人秀</a></p>
                 <p><a target="_blank" href="https://www.cnyes.com/">鉅亨網</a></p>
-                <p><a target="_blank" href="https://www.stockfeel.com.tw/">StockFeel股感</a></p>
-                <p><a target="_blank" href="https://www.cmoney.tw/vt/">CMoney股市大富翁</a></p>
+                <p><a target="_blank" href="https://www.stockfeel.com.tw/">StockFeel 股感</a></p>
+                <p><a target="_blank" href="https://www.cmoney.tw/vt/">股市大富翁</a></p>
                 <p><a target="_blank" href="https://www.moneybar.com.tw/">moneybar</a></p>
                 <p><a target="_blank" href="https://house123.com.tw/">house123</a></p>
                 <!-- <p><a target="_blank" href="https://www.stockq.org/">StockQ國際股市指數</a></p> -->
@@ -75,7 +76,7 @@
 
             <div class="col-lg-3 col-md-6">
                 <h2>知識與技能</h2>
-                <p><a target="_blank" href="https://www.finlab.tw/">FinLab財經實驗室</a></p>
+                <p><a target="_blank" href="https://www.finlab.tw/">FinLab 財經實驗室</a></p>
                 <p><a target="_blank" href="https://web.ntnu.edu.tw/~algo/">演算法筆記</a></p>
                 <p><a target="_blank" href="https://usaco.guide/">USACO Guide</a></p>
                 <p><a target="_blank" href="https://codingcompetitions.withgoogle.com/">Google Competitions</a></p>
