add a link to misc

--- a/misc/index.html
+++ b/misc/index.html
@@ -24,6 +24,7 @@
       <div class="row">
         <div class="col-lg-3 col-md-6">
           <h2>程式</h2>
+          <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLVVMQF8vWNCITO9U3h-cVA6nHkdqJEifc">圖解演算法教學</a></p>
           <p><a target="_blank" href="https://github.com/TheAlgorithms/Python">The Algorithms - Python</a></p>
           <p><a target="_blank" href="https://github.com/mahmoud/awesome-python-applications">Awesome Python Applications</a></p>
           <p><a target="_blank" href="https://jakevdp.github.io/WhirlwindTourOfPython/">A Whirlwind Tour of Python</a></p>
