--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
             <div class="col-lg-3 col-md-6">
                 <h2>其它</h2>
-                <p><a target="_blank" href="https://ashleyaoligei.github.io/">Ashley.py</a></p>
+                <p><a target="_blank" href="https://ashleyaoligei.github.io/">Ashley Aoligei</a></p>
                 <p><a target="_blank" href="https://www.packtpub.com/free-learning">Packt</a></p>
                 <p><a target="_blank" href="https://www.canva.com/">Canva</a></p>
                 <p><a target="_blank" href="https://genial.ly/">Genially</a></p>
