update index page

--- a/index.html
+++ b/index.html
@@ -65,13 +65,11 @@
 
             <div class="col-lg-3 col-md-6">
                 <h2>投資理財</h2>
-                <p><a target="_blank" href="https://www.youtube.com/@EBCmoneyshow">理財達人秀</a></p>
                 <p><a target="_blank" href="https://www.cnyes.com/">鉅亨網</a></p>
                 <p><a target="_blank" href="https://www.stockfeel.com.tw/">StockFeel 股感</a></p>
                 <p><a target="_blank" href="https://www.cmoney.tw/vt/">股市大富翁</a></p>
-                <p><a target="_blank" href="https://www.moneybar.com.tw/">moneybar</a></p>
+                <p><a target="_blank" href="https://www.stockq.org/">StockQ國際股市指數</a></p>
                 <p><a target="_blank" href="https://house123.com.tw/">house123</a></p>
-                <!-- <p><a target="_blank" href="https://www.stockq.org/">StockQ國際股市指數</a></p> -->
             </div>
 
             <div class="col-lg-3 col-md-6">
@@ -87,7 +85,6 @@
                 <h2>工作</h2>
                 <p><a target="_blank" href="https://github.com/">GitHub</a></p>
                 <p><a target="_blank" href="https://render.com/">Render</a></p>
-                <p><a target="_blank" href="https://getbootstrap.com/">Bootstrap</a></p>
                 <p><a target="_blank" href="https://developers.facebook.com/docs/facebook-login">Facebook Login</a></p>
                 <p><a target="_blank" href="https://console.developers.google.com/">Google API</a></p>
                 <p><a target="_blank" href="https://ksisunion.com/">ksisunion</a></p>
@@ -97,7 +94,6 @@
                 <h2>其它</h2>
                 <p><a target="_blank" href="https://ashleyaoligei.github.io/">Ashley Aoligei</a></p>
                 <p><a target="_blank" href="https://pinkcloverz.github.io/">Pink Clover</a></p>
-                <p><a target="_blank" href="https://www.packtpub.com/free-learning">Packt</a></p>
                 <p><a target="_blank" href="https://www.canva.com/">Canva</a></p>
                 <p><a target="_blank" href="https://lis.nsysu.edu.tw/">中山圖資處</a></p>
                 <p><a target="_blank" href="https://dec.lib.nsysu.edu.tw/patroninfo*cht">個人借閱</a></p>
