remove GCJ and add LeetCode

--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
                 <p><a target="_blank" href="https://www.finlab.tw/">FinLab 財經實驗室</a></p>
                 <p><a target="_blank" href="https://web.ntnu.edu.tw/~algo/">演算法筆記</a></p>
                 <p><a target="_blank" href="https://usaco.guide/">USACO Guide</a></p>
-                <p><a target="_blank" href="https://codingcompetitions.withgoogle.com/">Google Competitions</a></p>
                 <p><a target="_blank" href="https://www.facebook.com/codingcompetitions/hacker-cup">Meta Hacker Cup</a></p>
+                <p><a target="_blank" href="https://leetcode.com/">LeetCode</a></p>
             </div>
 
             <div class="col-lg-3 col-md-6">
