--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 <p><a target="_blank" href="https://web.ntnu.edu.tw/~algo/">演算法筆記</a></p>
                 <p><a target="_blank" href="https://usaco.guide/">USACO Guide</a></p>
                 <p><a target="_blank" href="https://www.facebook.com/codingcompetitions/hacker-cup">Meta Hacker Cup</a></p>
-                <p><a target="_blank" href="https://leetcode.com/">LeetCode</a></p>
+                <p><a target="_blank" href="https://judge.u-aizu.ac.jp/onlinejudge/">Aizu Online Judge</a></p>
             </div>
 
             <div class="col-lg-3 col-md-6">
