--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <p><a target="_blank" href="https://music.youtube.com/channel/UC_4Y1QqJr60C5Z7-eQWy-mw">IVE (eleven)</a></p>
                 <p><a target="_blank" href="https://music.youtube.com/channel/UCEdZAdnnKqbaHOlv8nM6OtA">aespa (nextlevel)</a></p>
                 <p><a target="_blank" href="https://music.youtube.com/channel/UCAKvDuIX3m1AUdPpDSqV_3w">Kep1er (wadada)</a></p>
-                <p><a target="_blank" href="https://music.youtube.com/channel/UCWT2ZfW7d8YI-HinHEVhyCA">(G)I-DLE (tomboy)</a></p>
+                <p><a target="_blank" href="https://music.youtube.com/channel/UCWT2ZfW7d8YI-HinHEVhyCA">(G)I-DLE (queencard)</a></p>
             </div>
 
             <div class="col-lg-3 col-md-6">
