--- a/misc/index.html
+++ b/misc/index.html
@@ -29,7 +29,7 @@
           <p><a target="_blank" href="https://open.163.com/newview/movie/courseintro?newurl=M7RQ2TGIA">三角學</a></p>
           <p><a target="_blank" href="https://www.youtube.com/watch?v=X99fpJ2HB0A">Daily Routine English</a></p>
           <p><a target="_blank" href="https://www.youtube.com/watch?v=HlwiJyOgntk">基本生活問候語20句</a></p>
-          <p><a target="_blank" href="https://www.bilibili.com/video/BV1YB4y1j7jM/">Java課程</a></p>
+          <p><a target="_blank" href="https://www.youtube.com/watch?v=JYLJbVECJxs&list=PLfpeXtDSa8rUl8S9NtbPKlg0ikc-rw-LC&index=1">AP Computer Science A</a></p>
         </div>
 
         <div class="col-lg-3 col-md-6">
