--- a/porn/index.html
+++ b/porn/index.html
@@ -42,8 +42,8 @@
           <p><a target="_blank" href="https://www.pornhub.com/model/monmontw">Monmontw</a></p>
           <p><a target="_blank" href="https://www.pornhub.com/model/nicolove">NicoLove</a></p>
           <p><a target="_blank" href="https://www.pornhub.com/model/reislin">Reislin</a></p>
+          <p><a target="_blank" href="https://www.pornhub.com/model/ssr-peach">SSR Peach</a></p>
           <p><a target="_blank" href="https://www.pornhub.com/model/sweetie-fox">Sweetie Fox</a></p>
-          <p><a target="_blank" href="https://www.pornhub.com/model/vita-won">Vita Won</a></p>
         </div>
         <div class="col-lg-3 col-md-6">
           <h2>Japanese</h2>
