--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
                 <p><a target="_blank" href="https://mail.google.com/">Gmail</a></p>
                 <p><a target="_blank" href="https://www.facebook.com/">Facebook</a></p>
                 <p><a target="_blank" href="https://manager.line.biz/">LINE商用</a></p>
+                <p><a target="_blank" href="https://www.momoshop.com.tw/">momo購物</a></p>
                 <p><a target="_blank" href="https://tw.buy.yahoo.com/">Yahoo!購物</a></p>
                 <p><a target="_blank" href="https://24h.pchome.com.tw/index/">PChome購物</a></p>
-                <p><a target="_blank" href="http://www.atmovies.com.tw/showtime/t07704/a07/">環球影城</a></p>
             </div>
 
             <div class="col-lg-3 col-md-6">
@@ -91,6 +91,8 @@
                 <p><a target="_blank" href="https://ashleyaoligei.github.io/">Ashley Aoligei</a></p>
                 <p><a target="_blank" href="https://pinkcloverz.github.io/">Pink Clover</a></p>
                 <p><a target="_blank" href="https://www.canva.com/">Canva</a></p>
+                <p><a target="_blank" href="http://www.atmovies.com.tw/showtime/t07703/a07/">威秀影城</a></p>
+                <p><a target="_blank" href="http://www.atmovies.com.tw/showtime/t07704/a07/">環球影城</a></p>
             </div>
         </div>
     </div>
