--- a/porn/index.html
+++ b/porn/index.html
@@ -39,7 +39,6 @@
           <p><a target="_blank" href="https://www.pornhub.com/model/babeneso">babeneso</a></p>
           <p><a target="_blank" href="https://www.pornhub.com/model/cutie-kim">Cutie Kim</a></p>
           <p><a target="_blank" href="https://www.pornhub.com/model/loliiiiipop99">loliiiiipop99</a></p>
-          <p><a target="_blank" href="https://www.pornhub.com/model/lonelymeow">LonelyMeow</a></p>
           <p><a target="_blank" href="https://www.pornhub.com/model/mollyredwolf">MollyRedWolf</a></p>
           <p><a target="_blank" href="https://www.pornhub.com/model/monmontw">Monmontw</a></p>
           <p><a target="_blank" href="https://www.pornhub.com/model/nicolove">NicoLove</a></p>
@@ -57,12 +56,12 @@
           <p><a target="_blank" href="https://www.pornhub.com/pornstar/nami-itoshino">愛乃奈美</a></p>
           <p><a target="_blank" href="https://www.pornhub.com/pornstar/ren-azumi">蓮美戀</a></p>
           <p><a target="_blank" href="https://www.pornhub.com/pornstar/yui-hatano">波多野結衣</a></p>
-          <p><a target="_blank" href="https://www.pornhub.com/video/search?search=kotone+amamiya">雨宮琴音</a></p>
         </div>
         <div class="col-lg-3 col-md-6">
           <h2>Channel</h2>
           <p><a target="_blank" href="https://www.pornhub.com/channels/av-jiali">AV Jiali</a></p>
           <p><a target="_blank" href="https://www.pornhub.com/channels/bratty-sis">Bratty Sis</a></p>
+          <p><a target="_blank" href="https://www.pornhub.com/channels/caribbeancom">Caribbeancom</a></p>
           <p><a target="_blank" href="https://www.pornhub.com/channels/dorcelclub">DorcelClub</a></p>
           <p><a target="_blank" href="https://www.pornhub.com/channels/faketaxi">Fake Taxi</a></p>
           <p><a target="_blank" href="https://www.pornhub.com/channels/property-sex">Property Sex</a></p>
