--- a/porn/index.html
+++ b/porn/index.html
@@ -24,15 +24,19 @@
       <div class="row">
         <div class="col-lg-3 col-md-6">
           <h2>Pornstar</h2>
-          <p><a target="_blank" href="https://www.pornhub.com/pornstar/agatha-vega/videos?o=lg">Agatha Vega</a></p>
-          <p><a target="_blank" href="https://www.pornhub.com/pornstar/eva-elfie/videos?o=lg">Eva Elfie</a></p>
-          <p><a target="_blank" href="https://www.pornhub.com/pornstar/haley-reed/videos?o=lg">Haley Reed</a></p>
-          <p><a target="_blank" href="https://www.pornhub.com/pornstar/kali-roses/videos?o=lg">Kali Roses</a></p>
-          <p><a target="_blank" href="https://www.pornhub.com/pornstar/kyler-quinn/videos?o=lg">Kyler Quinn</a></p>
-          <p><a target="_blank" href="https://www.pornhub.com/pornstar/melody-marks/videos?o=lg">Melody Marks</a></p>
-          <p><a target="_blank" href="https://www.pornhub.com/pornstar/mia-malkova/videos?o=lg">Mia Malkova</a></p>
-          <p><a target="_blank" href="https://www.pornhub.com/pornstar/scarlett-jones/videos?o=lg">Scarlett Jones</a></p>
-          <p><a target="_blank" href="https://www.pornhub.com/pornstar/stella-cox/videos?o=lg">Stella Cox</a></p>
+          <p><a target="_blank" href="https://www.pornhub.com/view_video.php?viewkey=ph632b26028a399">Haley Reed #1</a></p>
+          <p><a target="_blank" href="https://www.pornhub.com/view_video.php?viewkey=ph597f4cb354f3c">Haley Reed #2</a></p>
+          <p><a target="_blank" href="https://www.pornhub.com/view_video.php?viewkey=ph5ecd5fa119b63">Haley Reed #3</a></p>
+          <p><a target="_blank" href="https://www.pornhub.com/view_video.php?viewkey=ph5c38abe2b6289">Melody Marks #1</a></p>
+          <p><a target="_blank" href="https://www.pornhub.com/view_video.php?viewkey=ph61ec9a7bed577">Melody Marks #2</a></p>
+          <p><a target="_blank" href="https://www.pornhub.com/view_video.php?viewkey=659cca7aae529">Melody Marks #3</a></p>
+          <p><a target="_blank" href="https://www.pornhub.com/view_video.php?viewkey=ph625c47a5910bd">Melody Marks #4</a></p>
+          <p><a target="_blank" href="https://www.pornhub.com/view_video.php?viewkey=65431ee8356de">Mia Malkova #1</a></p>
+          <p><a target="_blank" href="https://www.pornhub.com/view_video.php?viewkey=ph558c5d5d00a8a">Mia Malkova #2</a></p>
+          <p><a target="_blank" href="https://www.pornhub.com/view_video.php?viewkey=65083f19a771e">Scarlett Jones #1</a></p>
+          <p><a target="_blank" href="https://www.pornhub.com/view_video.php?viewkey=654cbf9c3f84f">Scarlett Jones #2</a></p>
+          <p><a target="_blank" href="https://www.pornhub.com/view_video.php?viewkey=ph58e279c93fc49">Stella Cox #1</a></p>
+          <p><a target="_blank" href="https://www.pornhub.com/view_video.php?viewkey=ph60768a4a50638">Stella Cox #2</a></p>
         </div>
         <div class="col-lg-3 col-md-6">
           <h2>Model</h2>
