--- a/porn/index.html
+++ b/porn/index.html
@@ -24,6 +24,8 @@
       <div class="row">
         <div class="col-lg-3 col-md-6">
           <h2>Pornstar</h2>
+          <p><a target="_blank" href="https://www.pornhub.com/view_video.php?viewkey=65cf8d753c1c4">Coco Lovelock #1</a></p>
+          <p><a target="_blank" href="https://www.pornhub.com/view_video.php?viewkey=661e88ef6f32a">Coco Lovelock #2</a></p>
           <p><a target="_blank" href="https://www.pornhub.com/view_video.php?viewkey=ph632b26028a399">Haley Reed #1</a></p>
           <p><a target="_blank" href="https://www.pornhub.com/view_video.php?viewkey=ph597f4cb354f3c">Haley Reed #2</a></p>
           <p><a target="_blank" href="https://www.pornhub.com/view_video.php?viewkey=ph5ecd5fa119b63">Haley Reed #3</a></p>
