--- a/porn/index.html
+++ b/porn/index.html
@@ -24,8 +24,6 @@
       <div class="row">
         <div class="col-lg-3 col-md-6">
           <h2>Pornstar</h2>
-          <p><a target="_blank" href="https://www.pornhub.com/view_video.php?viewkey=65cf8d753c1c4">Coco Lovelock #1</a></p>
-          <p><a target="_blank" href="https://www.pornhub.com/view_video.php?viewkey=661e88ef6f32a">Coco Lovelock #2</a></p>
           <p><a target="_blank" href="https://www.pornhub.com/view_video.php?viewkey=ph632b26028a399">Haley Reed #1</a></p>
           <p><a target="_blank" href="https://www.pornhub.com/view_video.php?viewkey=ph597f4cb354f3c">Haley Reed #2</a></p>
           <p><a target="_blank" href="https://www.pornhub.com/view_video.php?viewkey=ph5ecd5fa119b63">Haley Reed #3</a></p>
@@ -37,8 +35,6 @@
           <p><a target="_blank" href="https://www.pornhub.com/view_video.php?viewkey=ph558c5d5d00a8a">Mia Malkova #2</a></p>
           <p><a target="_blank" href="https://www.pornhub.com/view_video.php?viewkey=65083f19a771e">Scarlett Jones #1</a></p>
           <p><a target="_blank" href="https://www.pornhub.com/view_video.php?viewkey=654cbf9c3f84f">Scarlett Jones #2</a></p>
-          <p><a target="_blank" href="https://www.pornhub.com/view_video.php?viewkey=ph58e279c93fc49">Stella Cox #1</a></p>
-          <p><a target="_blank" href="https://www.pornhub.com/view_video.php?viewkey=ph60768a4a50638">Stella Cox #2</a></p>
         </div>
         <div class="col-lg-3 col-md-6">
           <h2>Model</h2>
@@ -46,10 +42,8 @@
           <p><a target="_blank" href="https://www.pornhub.com/model/babeneso">babeneso</a></p>
           <p><a target="_blank" href="https://www.pornhub.com/model/badcutegirl">BadCuteGirl</a></p>
           <p><a target="_blank" href="https://www.pornhub.com/model/cutie-kim">Cutie Kim</a></p>
-          <p><a target="_blank" href="https://www.pornhub.com/model/loliiiiipop99">loliiiiipop99</a></p>
           <p><a target="_blank" href="https://www.pornhub.com/model/mayalis">MayaLis</a></p>
           <p><a target="_blank" href="https://www.pornhub.com/model/mollyredwolf">MollyRedWolf</a></p>
-          <p><a target="_blank" href="https://www.pornhub.com/model/monmontw">Monmontw</a></p>
           <p><a target="_blank" href="https://www.pornhub.com/model/naomiii-hub">Naomiii hub</a></p>
           <p><a target="_blank" href="https://www.pornhub.com/model/nicolove">NicoLove</a></p>
           <p><a target="_blank" href="https://www.pornhub.com/model/reislin">Reislin</a></p>
@@ -57,27 +51,18 @@
           <p><a target="_blank" href="https://www.pornhub.com/model/sweetie-fox">Sweetie Fox</a></p>
         </div>
         <div class="col-lg-3 col-md-6">
-          <h2>Japanese</h2>
-          <p><a target="_blank" href="https://www.pornhub.com/pornstar/akari-asagiri">朝桐光</a></p>
-          <p><a target="_blank" href="https://www.pornhub.com/pornstar/arisa-nakano">中野亞梨沙</a></p>
-          <p><a target="_blank" href="https://www.pornhub.com/pornstar/ayumi-iwasa">岩佐步美</a></p>
-          <p><a target="_blank" href="https://www.pornhub.com/pornstar/honami-uehara">上原保奈美</a></p>
-          <p><a target="_blank" href="https://www.pornhub.com/pornstar/maki-hojo">北條麻妃</a></p>
-          <p><a target="_blank" href="https://www.pornhub.com/pornstar/nami-itoshino">愛乃奈美</a></p>
-          <p><a target="_blank" href="https://www.pornhub.com/pornstar/ren-azumi">蓮美戀</a></p>
-          <p><a target="_blank" href="https://www.pornhub.com/pornstar/yui-hatano">波多野結衣</a></p>
-        </div>
-        <div class="col-lg-3 col-md-6">
           <h2>Channel</h2>
           <p><a target="_blank" href="https://www.pornhub.com/channels/av-jiali">AV Jiali</a></p>
+          <p><a target="_blank" href="https://www.pornhub.com/channels/office-pov">Office POV</a></p>
           <p><a target="_blank" href="https://www.pornhub.com/channels/bratty-sis">Bratty Sis</a></p>
           <p><a target="_blank" href="https://www.pornhub.com/channels/caribbeancom">Caribbeancom</a></p>
           <p><a target="_blank" href="https://www.pornhub.com/channels/dorcelclub">DorcelClub</a></p>
           <p><a target="_blank" href="https://www.pornhub.com/channels/faketaxi">Fake Taxi</a></p>
           <p><a target="_blank" href="https://www.pornhub.com/channels/property-sex">Property Sex</a></p>
-          <p><a target="_blank" href="https://www.pornhub.com/channels/teamskeet">Team Skeet</a></p>
           <p><a target="_blank" href="https://www.pornhub.com/channels/tushy">Tushy</a></p>
-          <p><a target="_blank" href="https://www.pornhub.com/channels/wow-girls">Wow Girls</a></p>
+          <p><a target="_blank" href="https://www.pornhub.com/channels/nubilefilms">Nubile Films</a></p>
+          <p><a target="_blank" href="https://www.pornhub.com/channels/teen-fidelity">Teen Fidelity</a></p>
+          <p><a target="_blank" href="https://www.pornhub.com/channels/hot-wife-xxx">Hot Wife XXX</a></p>
         </div>
       </div>
     </div>
